<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musia_musicalstructureapp.MainActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_footer">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bigTextMarginTop"
            android:text="@string/album_name"
            android:textStyle="bold"
            android:textSize="@dimen/bigTextSize"
            android:gravity="center_horizontal"
            />
    <ImageView
        android:layout_width="@dimen/interpretImageSizes"
        android:layout_height="@dimen/interpretImageSizes"
        android:src="@drawable/alanisalbum"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/interpretTopBottomMargin"
        android:layout_marginBottom="@dimen/interpretTopBottomMargin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/albumsHeaderTextSize"
        android:padding="@dimen/bigTextMarginTop"
        android:text="@string/about_album"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="@dimen/trackTextSize"
                    android:padding="@dimen/trackPadding"
                    android:text="@string/track_name"
                    android:gravity="left"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="@dimen/trackTextSize"
                    android:padding="@dimen/trackPadding"
                    android:text="@string/track_duration"
                    android:gravity="right"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="@dimen/trackTextSize"
                    android:padding="@dimen/trackPadding"
                    android:text="@string/track_name"
                    android:gravity="left"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="@dimen/trackTextSize"
                    android:padding="@dimen/trackPadding"
                    android:text="@string/track_duration"
                    android:gravity="right"
                    android:layout_weight="1"
                    />
            </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_name"
                android:gravity="left"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_duration"
                android:gravity="right"
                android:layout_weight="1"
                />
        </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_name"
                android:gravity="left"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_duration"
                android:gravity="right"
                android:layout_weight="1"
                />
        </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_name"
                android:gravity="left"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_duration"
                android:gravity="right"
                android:layout_weight="1"
                />
        </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_name"
                android:gravity="left"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_duration"
                android:gravity="right"
                android:layout_weight="1"
                />
        </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_name"
                android:gravity="left"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_duration"
                android:gravity="right"
                android:layout_weight="1"
                />
        </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_name"
                android:gravity="left"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_duration"
                android:gravity="right"
                android:layout_weight="1"
                />
        </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_name"
                android:gravity="left"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_duration"
                android:gravity="right"
                android:layout_weight="1"
                />
        </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_name"
                android:gravity="left"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/trackTextSize"
                android:padding="@dimen/trackPadding"
                android:text="@string/track_duration"
                android:gravity="right"
                android:layout_weight="1"
                />
        </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="@dimen/descTextPadding"
        android:text="@string/album_detail_activity_description"
        />


    <LinearLayout
        android:id="@+id/rl_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >


        <include layout="@layout/player_controls"
            />
    </LinearLayout>


</RelativeLayout>
